v0.4/_sources/examples/ncss/NCSS_Timeseries_Examples.rst.txt


.. _sphx_glr_examples_ncss_NCSS_Timeseries_Examples.py:


================
NCSS Time Series
================

Use Siphon to query the NetCDF Subset Service for a timeseries.



.. code-block:: python

    from datetime import datetime, timedelta

    import matplotlib.pyplot as plt
    from netCDF4 import num2date

    from siphon.catalog import TDSCatalog
    from siphon.ncss import NCSS







First we construct a TDSCatalog instance pointing to our dataset of interest, in
this case TDS' "Best" virtual dataset for the GFS global 0.5 degree collection of
GRIB files. We see this catalog contains a single dataset.



.. code-block:: python

    best_gfs = TDSCatalog('http://thredds.ucar.edu/thredds/catalog/grib/NCEP/GFS/'
                          'Global_0p5deg/catalog.xml?dataset=grib/NCEP/GFS/Global_0p5deg/Best')
    print(best_gfs.datasets)





.. rst-class:: sphx-glr-script-out

 Out::

    OrderedDict([('Best GFS Half Degree Forecast Time Series', <siphon.catalog.Dataset object at 0x1106b0358>)])


We pull out this dataset and look at the access urls.



.. code-block:: python

    best_ds = list(best_gfs.datasets.values())[0]
    print(best_ds.access_urls)





.. rst-class:: sphx-glr-script-out

 Out::

    {'OPENDAP': 'http://thredds.ucar.edu/thredds/dodsC/grib/NCEP/GFS/Global_0p5deg/Best', 'WCS': 'http://thredds.ucar.edu/thredds/wcs/grib/NCEP/GFS/Global_0p5deg/Best', 'WMS': 'http://thredds.ucar.edu/thredds/wms/grib/NCEP/GFS/Global_0p5deg/Best', 'NetcdfSubset': 'http://thredds.ucar.edu/thredds/ncss/grib/NCEP/GFS/Global_0p5deg/Best', 'CdmRemote': 'http://thredds.ucar.edu/thredds/cdmremote/grib/NCEP/GFS/Global_0p5deg/Best', 'NCML': 'http://thredds.ucar.edu/thredds/ncml/grib/NCEP/GFS/Global_0p5deg/Best', 'UDDC': 'http://thredds.ucar.edu/thredds/uddc/grib/NCEP/GFS/Global_0p5deg/Best', 'ISO': 'http://thredds.ucar.edu/thredds/iso/grib/NCEP/GFS/Global_0p5deg/Best'}


Note the `NetcdfSubset` entry, which we will use with our NCSS class.



.. code-block:: python

    ncss = NCSS(best_ds.access_urls['NetcdfSubset'])







We can then use the `ncss` object to create a new query object, which
facilitates asking for data from the server.



.. code-block:: python

    query = ncss.query()







We construct a query asking for data corresponding to latitude 40N and longitude 105W,
for the next 7 days. We also ask for NetCDF version 4 data, for the variable
'Temperature_isobaric', at the vertical level of 100000 Pa (approximately surface).
This request will return all times in the range for a single point. Note the string
representation of the query is a properly encoded query string.



.. code-block:: python

    now = datetime.utcnow()
    query.lonlat_point(-105, 40).vertical_level(100000).time_range(now, now + timedelta(days=7))
    query.variables('Temperature_isobaric').accept('netcdf')







We now request data from the server using this query. The `NCSS` class handles parsing
this NetCDF data (using the `netCDF4` module). If we print out the variable names, we
see our requested variables, as well as a few others (more metadata information)



.. code-block:: python

    data = ncss.get_data(query)
    list(data.variables.keys())







We'll pull out the temperature  and time variables.



.. code-block:: python

    temp = data.variables['Temperature_isobaric']
    time = data.variables['time']







The time values are in hours relative to the start of the entire model collection.
Fortunately, the `netCDF4` module has a helper function to convert these numbers into
Python `datetime` objects. We can see the first 5 element output by the function look
reasonable.



.. code-block:: python

    time_vals = num2date(time[:].squeeze(), time.units)
    print(time_vals[:5])





.. rst-class:: sphx-glr-script-out

 Out::

    [datetime.datetime(2017, 9, 2, 0, 0) datetime.datetime(2017, 9, 2, 3, 0)
     datetime.datetime(2017, 9, 2, 6, 0) datetime.datetime(2017, 9, 2, 9, 0)
     datetime.datetime(2017, 9, 2, 12, 0)]


Now we can plot these up using matplotlib, which has ready-made support for `datetime`
objects.



.. code-block:: python

    fig, ax = plt.subplots(1, 1, figsize=(9, 8))
    ax.plot(time_vals, temp[:].squeeze(), 'r', linewidth=2)
    ax.set_ylabel('{} ({})'.format(temp.standard_name, temp.units))
    ax.set_xlabel('Forecast Time (UTC)')
    ax.grid(True)



.. image:: /examples/ncss/images/sphx_glr_NCSS_Timeseries_Examples_001.png
    :align: center




**Total running time of the script:** ( 0 minutes  7.912 seconds)



.. container:: sphx-glr-footer


  .. container:: sphx-glr-download

     :download:`Download Python source code: NCSS_Timeseries_Examples.py <NCSS_Timeseries_Examples.py>`



  .. container:: sphx-glr-download

     :download:`Download Jupyter notebook: NCSS_Timeseries_Examples.ipynb <NCSS_Timeseries_Examples.ipynb>`

.. rst-class:: sphx-glr-signature

    `Generated by Sphinx-Gallery <http://sphinx-gallery.readthedocs.io>`_
